crates/forge_main/src/completer/snapshots/forge__completer__search_term__tests__word_based_search.snap
---
source: crates/forge_main/src/completer/search_term.rs
expression: results
---
[
    TermSpec {
        input: "a[bc def ghi",
        output: None,
        span_start: None,
        span_end: None,
        pos: 1,
    },
    TermSpec {
        input: "ab[c def ghi",
        output: None,
        span_start: None,
        span_end: None,
        pos: 2,
    },
    TermSpec {
        input: "abc[ def ghi",
        output: None,
        span_start: None,
        span_end: None,
        pos: 3,
    },
    TermSpec {
        input: "abc [def ghi",
        output: None,
        span_start: None,
        span_end: None,
        pos: 4,
    },
    TermSpec {
        input: "abc d[ef ghi",
        output: None,
        span_start: None,
        span_end: None,
        pos: 5,
    },
    TermSpec {
        input: "abc de[f ghi",
        output: None,
        span_start: None,
        span_end: None,
        pos: 6,
    },
    TermSpec {
        input: "abc def[ ghi",
        output: None,
        span_start: None,
        span_end: None,
        pos: 7,
    },
    TermSpec {
        input: "abc def [ghi",
        output: None,
        span_start: None,
        span_end: None,
        pos: 8,
    },
    TermSpec {
        input: "abc def g[hi",
        output: None,
        span_start: None,
        span_end: None,
        pos: 9,
    },
    TermSpec {
        input: "abc def gh[i",
        output: None,
        span_start: None,
        span_end: None,
        pos: 10,
    },
    TermSpec {
        input: "abc def ghi[",
        output: None,
        span_start: None,
        span_end: None,
        pos: 11,
    },
]
